--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'absen' do
+target 'BasulMobile' do
   config = use_native_modules!
 
   use_react_native!(
@@ -12,7 +12,9 @@ target 'absen' do
     :hermes_enabled => false
   )
 
-  target 'absenTests' do
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  target 'BasulMobileTests' do
     inherit! :complete
     # Pods for testing
   end
