--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "absen",
+  "name": "BasulMobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.8.0",
     "react-native-svg": "^12.1.0",
